emulation: Disregard bce when a new line appears at the bottom

Applying bce (background color erase) on a line that newly appears
at the bottom when scrolling is a badly designed feature, causing
many problems. Let's see if we break anything by disabling it.

https://bugzilla.gnome.org/show_bug.cgi?id=754596